@@ -24,12 +24,31 @@ TEST(sink, stdout_sink) {
 
     EXPECT_EQ(sink.level(), logger::log_level::info);
     EXPECT_EQ(sink.name(), "stdout");
+
     ::testing::internal::CaptureStdout();
     sink.write(logger::log_level::info, "Hello, %s !", "world");
     std::string output = ::testing::internal::GetCapturedStdout();
-    EXPECT_TRUE( output.rfind("[L SUBSYS=stdout] Hello, world !")!= std::string::npos);
+
+    auto pos = output.rfind("[L SUBSYS");
+    EXPECT_EQ("[L SUBSYS=stdout] Hello, world !\n", ( pos != std::string::npos ? output.substr(pos) : "pattern \"[L SUBSYS\" not found"));
 
     logger::logger_ptr logger_2 = logger::get<logger::stdout_sink>("stdout");
+
+}
+
+TEST(sink, stdout_sink_default) {
+
+    logger::stdout_sink sink;
+
+    EXPECT_EQ(sink.level(), logger::log_level::info);
+    EXPECT_EQ(sink.name(), "default");
+
+    ::testing::internal::CaptureStdout();
+    sink.write(logger::log_level::info, "Hello, %s !", "world");
+    std::string output = ::testing::internal::GetCapturedStdout();
+
+    auto pos = output.rfind("[L SUBSYS");
+    EXPECT_EQ("[L SUBSYS=default] Hello, world !\n", ( pos != std::string::npos ? output.substr(pos) : "pattern \"[L SUBSYS\" not found"));
 
 }
 
@@ -39,13 +58,30 @@ TEST(sink, stderr_sink) {
 
     EXPECT_EQ(sink.level(), logger::log_level::info);
     EXPECT_EQ(sink.name(), "stderr");
+
     ::testing::internal::CaptureStderr();
     sink.write(logger::log_level::info, "Hello, %s !", "world");
     std::string output = ::testing::internal::GetCapturedStderr();
-    EXPECT_TRUE( output.rfind("[L SUBSYS=stderr] Hello, world !")!= std::string::npos);
+
+    auto pos = output.rfind("[L SUBSYS");
+    EXPECT_EQ("[L SUBSYS=stderr] Hello, world !\n", ( pos != std::string::npos ? output.substr(pos) : "pattern \"[L SUBSYS\" not found"));
 
     logger::logger_ptr logger_2 = logger::get<logger::stderr_sink>("stderr");
     logger_2->warning("New output format...");
+}
+
+TEST(sink, stderr_sink_default) {
+    logger::stderr_sink sink;
+
+    EXPECT_EQ(sink.level(), logger::log_level::info);
+    EXPECT_EQ(sink.name(), "default");
+
+    ::testing::internal::CaptureStderr();
+    sink.write(logger::log_level::info, "Hello, %s !", "world");
+    std::string output = ::testing::internal::GetCapturedStderr();
+
+    auto pos = output.rfind("[L SUBSYS");
+    EXPECT_EQ("[L SUBSYS=default] Hello, world !\n", ( pos != std::string::npos ? output.substr(pos) : "pattern \"[L SUBSYS\" not found"));
 }
 
 TEST(sink, syslog_sink) {
@@ -58,5 +94,4 @@ TEST(sink, syslog_sink) {
 
     logger::logger_ptr logger_1 = logger::get<logger::syslog_sink>("syslog", "local0", 0);
     logger::logger_ptr logger_2 = logger::get<logger::syslog_sink>("syslog");
-
 }
